[package]
name = "sleding"
version = "0.1.0"
authors = ["Benito <benito.gomez@idnerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "*"
log = "0.4"
pretty_env_logger = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.11.0"