[package]
name = "sleding"
version = "0.1.0"
authors = ["Benito <benito.gomez@idnerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "*"
log = "0.4"
pretty_env_logger = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.11.0"
hyper = "0.14.4"
glob = "0.3.0"
regex = "1"
lazy_static = "1.4.*"
tokio-stream = "0.1.4"
